welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: reassignment to val
	if (versLAvant=true) avance(nbPas);else recule(nbPas);
                      ^Program:3: error: type mismatch;
 found   : Unit
 required: Int
	if (versLAvant=true) avance(nbPas);else recule(nbPas);
                                   ^Program:3: error: type mismatch;
 found   : Unit
 required: Int
	if (versLAvant=true) avance(nbPas);else recule(nbPas);
                                                      ^